PR Feedback: mmahoney - If at end of replay then have play button restart from the beginning   - I decided not to add a third "redo/restart" icon because I didn't like     the available icons and it just seemed to add complexity to the UI. I did     update the tooltip to be "Play Again" - Adjust tooltip to be anchored to the right in order to avoid it going off-screen   to the right. - Limit tooltip activation to slider hover (and not also tooltip area hover) so as   not to occlude controls below the tooltip area.

--- a/src/styles/_overrides.scss
+++ b/src/styles/_overrides.scss
@@ -369,7 +369,8 @@ html.kiosk {
 }
 
 /*
-  Datepicker overrides for graph replay
+  Datepicker overrides for graph replay and other uses
+  - note: global .tooltip setting but I think it should be OK
 */
 // use PF fonts and fond-size
 .react-datepicker {
